--- a/packages/dashboard-frontend/src/components/Workspace/Status/index.module.css
+++ b/packages/dashboard-frontend/src/components/Workspace/Status/index.module.css
@@ -3,26 +3,6 @@
   text-transform: capitalize;
 }
 
-html.pf-v6-theme-dark .pf-m-green.statusLabel {
-  --pf-v6-c-label--BackgroundColor: var(--pf-t--color--green--10);
-  --pf-v6-c-label--Color: var(--pf-t--color--green--40);
-}
-
-html.pf-v6-theme-dark .pf-m-orange.statusLabel {
-  --pf-v6-c-label--BackgroundColor: var(--pf-t--color--orange--40);
-  --pf-v6-c-label--Color: var(--pf-t--color--orange--10);
-}
-
-html.pf-v6-theme-dark .pf-m-blue.statusLabel {
-  --pf-v6-c-label--BackgroundColor: var(--pf-t--color--blue--10);
-  --pf-v6-c-label--Color: var(--pf-t--color--blue--30);
-}
-
-html.pf-v6-theme-dark .pf-m-info.statusLabel {
-  --pf-v6-c-label--BackgroundColor: var(--pf-t--color--blue--10);
-  --pf-v6-c-label--Color: var(--pf-t--color--blue--30);
-}
-
 .statusIndicator {
   margin-right: 10px;
 }
